fixed the issue with the tax not showing

--- a/css/st-cart.css
+++ b/css/st-cart.css
@@ -653,7 +653,7 @@
   cursor: pointer;
 }
 
-.st-success {
+.st-chkout-success {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
